--- a/brand.html
+++ b/brand.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="대림바스" />
+    <meta property="og:description" content="안녕하세요 대림바스입니다." />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
@@ -24,6 +29,7 @@
     <script src="./js/main.js" defer></script>
     <script src="./js/animation.js" defer></script>
     <title>대림바스</title>
+    <link rel="shortcut icon" href="./images/layout/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="wrap" class="header_top">
@@ -35,7 +41,7 @@
               <div class="sub_page">
                 <div class="txt_wrap">
                   <div class="tit_txt">
-                    <span class="daelim_icon"><img src="../images/main/daelim_ico.png" alt="icon" /></span>
+                    <span class="daelim_icon"><img src="./images/main/daelim_ico.png" alt="icon" /></span>
                     <span class="d_idx">Brand</span>
                   </div>
                   <div class="main_txt">대림바스</div>
@@ -70,7 +76,7 @@
             </div>
             <div class="cont_box img-ani bottom-top">
               <div class="cont_img">
-                <img src="../images/brand/about_bg02.png" alt="" />
+                <img src="./images/brand/about_bg02.png" alt="" />
               </div>
               <div class="cont_txt">
                 <ul>
@@ -103,7 +109,7 @@
         <div class="section04 img-ani bottom-top">
           <div class="sub_page">
             <div class="sec04_cont">
-              <img src="../images/brand/about_img.png" alt="" />
+              <img src="./images/brand/about_img.png" alt="" />
               <div class="sec04_txt img-ani bottom-top">
                 최고, 최대, 최초의 역사와 기술.<br />
                 이제 욕실을 넘어 물과 손이 닿는 모든 곳에 <br />
@@ -142,23 +148,23 @@
                   <div class="as_cont">
                     <ul>
                       <li>
-                        <img src="../images/brand/about_sec06_01.png" alt="" />
+                        <img src="./images/brand/about_sec06_01.png" alt="" />
                         <span>업계 최고 A/S망 <br />통합 서비스센터 운영</span>
                       </li>
                       <li>
-                        <img src="../images/brand/about_sec06_02.png" alt="" />
+                        <img src="./images/brand/about_sec06_02.png" alt="" />
                         <span>동종 업계 대비 <br class="dis-no vis-700" />최다 AS 인력 보유 <br />신속한 서비스 처리 지원</span>
                       </li>
                       <li>
-                        <img src="../images/brand/about_sec06_03.png" alt="" />
+                        <img src="./images/brand/about_sec06_03.png" alt="" />
                         <span>국내 최다 A/S망 보유 <br />(A/S직영점 47개)</span>
                       </li>
                     </ul>
                   </div>
                 </div>
                 <div class="global_box_r">
-                  <img class="dis-900" src="../images/brand/about_sec06_04.png" alt="" />
-                  <img class="dis-no vis-900" src="../images/brand/about_sec06_04_mo.png" alt="" style="width: 275.5px" />
+                  <img class="dis-900" src="./images/brand/about_sec06_04.png" alt="" />
+                  <img class="dis-no vis-900" src="./images/brand/about_sec06_04_mo.png" alt="" style="width: 275.5px" />
                 </div>
               </div>
             </div>
@@ -174,23 +180,23 @@
               </div>
             </div>
             <div class="bath_img">
-              <img class="bath01 img-ani bottom-top tran01" src="../images/brand/bath_img01.png" alt="" />
-              <img class="img_ab bath02 img-ani bottom-top tran02" src="../images/brand/bath_img02.png" alt="" />
-              <img class="img_ab bath03 img-ani bottom-top tran03" src="../images/brand/bath_img03.png" alt="" />
-              <img class="img_ab bath04 img-ani bottom-top tran04" src="../images/brand/bath_img04.png" alt="" />
-              <img class="img_ab bath05 img-ani bottom-top tran05" src="../images/brand/bath_img05.png" alt="" />
+              <img class="bath01 img-ani bottom-top tran01" src="./images/brand/bath_img01.png" alt="" />
+              <img class="img_ab bath02 img-ani bottom-top tran02" src="./images/brand/bath_img02.png" alt="" />
+              <img class="img_ab bath03 img-ani bottom-top tran03" src="./images/brand/bath_img03.png" alt="" />
+              <img class="img_ab bath04 img-ani bottom-top tran04" src="./images/brand/bath_img04.png" alt="" />
+              <img class="img_ab bath05 img-ani bottom-top tran05" src="./images/brand/bath_img05.png" alt="" />
             </div>
           </div>
         </div>
         <div class="introduce m_section07 dis-no vis-700">
           <div class="inner_page">
             <div class="bath_img">
-              <img class="m_bath01 img-ani bottom-top" src="../images/brand/about_mo_img01.png" alt="" />
-              <img class="img_ab m_bath02 img-ani bottom-top" src="../images/brand/about_mo_img02.png" alt="" />
+              <img class="m_bath01 img-ani bottom-top" src="./images/brand/about_mo_img01.png" alt="" />
+              <img class="img_ab m_bath02 img-ani bottom-top" src="./images/brand/about_mo_img02.png" alt="" />
             </div>
             <div class="txt_wrap">
               <div class="tit_txt">
-                <span class="daelim_icon"><img src="../images/brand/daelim_ico_w.png" alt="icon" /></span>
+                <span class="daelim_icon"><img src="./images/brand/daelim_ico_w.png" alt="icon" /></span>
                 <span class="d_idx">Daelim Bath</span>
               </div>
               <div class="txt_tit">
@@ -201,8 +207,8 @@
               </div>
             </div>
             <div class="bath_img bot">
-              <img class="m_bath03 img-ani bottom-top" src="../images/brand/about_mo_img03.png" alt="" />
-              <img class="m_bath04 img-ani bottom-top" src="../images/brand/about_mo_img04.png" alt="" />
+              <img class="m_bath03 img-ani bottom-top" src="./images/brand/about_mo_img03.png" alt="" />
+              <img class="m_bath04 img-ani bottom-top" src="./images/brand/about_mo_img04.png" alt="" />
             </div>
           </div>
         </div>
