--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="대림바스" />
+    <meta property="og:description" content="안녕하세요 대림바스입니다." />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
@@ -24,6 +29,7 @@
     <script src="./js/main.js" defer></script>
     <script src="./js/animation.js" defer></script>
     <title>대림바스</title>
+    <link rel="shortcut icon" href="./images/layout/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
