--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/sub-contents.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <script src="./js/jquery-3.6.1.min.js"></script>
-    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
     <script src="./js/jquery.waypoints.min.js"></script>
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/animation.gsap.min.js"></script>
@@ -42,7 +42,7 @@
                 <img src="./images/layout/h_logo.png" alt="" />
               </a>
             </div>
-            <nav class="menu center">
+            <nav class="menu center dis-900">
               <ul class="">
                 <li class="menudepth">
                   <a href="brand.html" class="menuitem">바스</a>
