--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/swiper-bundle.css" />
+    <link rel="stylesheet" href="./css/swiper.min.css" />
     <link rel="stylesheet" href="./css/animations.css" />
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/main.css" />
@@ -317,7 +317,7 @@
                       <li class="depth01">
                         <span class="depth01_tit">바스</span>
                         <ul>
-                          <li class="depth02"><a href="">대림바스</a></li>
+                          <li class="depth02"><a href="brand.html">대림바스</a></li>
                           <li class="depth02"><a href="">FÜLEN</a></li>
                           <li class="depth02"><a href="">자동물내림 일체형비데</a></li>
                           <li class="depth02"><a href="">위생도기 기술력</a></li>
@@ -1306,7 +1306,7 @@
           <div class="page">
             <div class="slidebx img-ani bottom-top">
               <ul class="media_list">
-                <li class="mag_li01 on">
+                <li class="mag_li01">
                   <img src="./images/main/6-1.png" class="mag_img" alt="" />
                   <div>
                     <span class="sub_tit">MEDIA</span>
