--- a/brand.html
+++ b/brand.html
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/swiper-bundle.css" />
+    <link rel="stylesheet" href="./css/swiper.min.css" />
     <link rel="stylesheet" href="./css/animations.css" />
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/sub-contents.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <script src="./js/jquery-3.6.1.min.js"></script>
-    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
     <script src="./js/jquery.waypoints.min.js"></script>
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/animation.gsap.min.js"></script>
